--- a/public/templates/editPage.html
+++ b/public/templates/editPage.html
@@ -1,8 +1,7 @@
 <div ng-controller="EditPageCtrl as edit">
-
   <div class="container">
-  <h3>DECK NAME: <input ng-model="edit.deck.deckname" /></h3>
 
+    <h3>DECK NAME: <input ng-model="edit.deck.deckname" /></h3>
     <div class="row">
       <div class="col-xs-5 flashcard">
         <h4>Question</h4>
@@ -19,9 +18,9 @@
 
     <button class="btn btn-primary" ng-click="edit.addCard(edit.newCard)">Add card</button>
 
-    <hr> <!-- Start of list of currently made cards -->
+    <hr>
 
-    <div ng-repeat="card in edit.deck.cards" >
+    <div ng-repeat="card in edit.deck.cards"> <!-- Start of list of currently made cards -->
       <div class="row">
         <div class="col-xs-5 flashcard">
           <h4>Question</h4>
@@ -53,10 +52,7 @@
       <button class="btn btn-danger" ng-click="edit.deleteCard(card)">Delete card</button>
       <button class="btn" ng-click="edit.moveUp(card)"><span class="fa fa-angle-up"></span></button>
       <button class="btn" ng-click="edit.moveDown(card)"><span class="fa fa-angle-down"></span></button>
-
-
-
-    </div> <!-- end ng-repeat div -->
+    </div> <!-- end ng-repeat for currently made cards -->
 
     <button class="btn btn-primary savedeckbtn" type="button" ng-click="edit.handleSave()">Save changes to this deck</button>
 
