--- a/public/templates/studyPage.html
+++ b/public/templates/studyPage.html
@@ -7,8 +7,8 @@
     </div>
   </div>
 
-  <!-- <div class="row">
-    <div class="text-center col-xs-4">
+  <div class="row">
+    <!-- <div class="text-center col-xs-4">
       <div class="btn-group" role="group">
       <button type="button" class="btn btn-default btn-success" ng-click="study.handleRight()" ng-if="false">Right</button>
       <button type="button" class="btn btn-default btn-danger" ng-click="study.handleWrong()" ng-if="false">Wrong</button>
