--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -140,3 +140,22 @@ form > * {
   -webkit-backface-visibility: hidden;
   position: relative;
 }
+
+#onClickShowSavedForUserSide {
+  animation-name: showSavedAfterClick;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 3;
+  animation-direction: initial;
+  opacity: 0
+}
+
+.ng-show {
+  animation: 1s showSavedAfterClick;
+}
+
+@keyframes showSavedAfterClick {
+  0%   {opacity: 0;}
+  50%  {opacity: 1;}
+  100% {opacity: 0;}
+}
