--- a/public/templates/editPage.html
+++ b/public/templates/editPage.html
@@ -1,7 +1,14 @@
 <div ng-controller="EditPageCtrl as edit">
 
   <div class="container">
-  <h3>DECK NAME: <input ng-model="edit.deck.deckname" /></h3>
+
+  <div>
+    <h3>DECK NAME: <input ng-model="edit.deck.deckname"/>
+      <i class="fa fa-plus-circle" id="parentOfOnClickShowSavedForUserSide" ng-click="edit.handleEditAndSave(); showme=false; showme=true">
+        <span ng-show="showme" id="onClickShowSavedForUserSide">saved</span>
+      </i>
+    </h3>
+  </div>
 
     <div class="row">
       <div class="col-xs-5 flashcard">
