--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,10 +14,6 @@ li {
   margin: 10px;
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
-
 .flashcard textarea {
   resize: none;
   display: block;
@@ -107,6 +103,7 @@ form > * {
     position: relative;
     margin: 0 auto;
     cursor: pointer;
+/*     background-color: grey; */
 }
 
 .flip .card.flipped {
@@ -135,7 +132,8 @@ form > * {
 .flip .card .front {
   position: relative;
   -webkit-backface-visibility: hidden;
-}
+/*  z-index: 1;
+*/}
 
 .flip .card .back {
   transform: rotateY(-180deg);
