--- a/public/templates/app.html
+++ b/public/templates/app.html
@@ -2,39 +2,16 @@
   <h3>Choose a deck</h3>
 
   <table class="table table-striped table-bordered table-hover">
-    <tr ng-repeat="deck in app.decks track by $index" class="deck-list-entry">
+    <tr ng-if="app.decks.length !== 0" ng-repeat="deck in app.decks track by $index" class="deck-list-entry">
       <td>{{ deck.deckname }}</td>
       <td><a href="/study" ng-click="app.getDeck(deck)"><button class="buttonInTable btn btn-primary">Study</button></a></td>
       <td><a href="/edit"><button class="buttonInTable btn btn-info" ng-click="app.getDeck(deck)">Edit</button></a></td>
       <td><button class="buttonInTable btn btn-danger" ng-click="app.handleDelete(deck)">Delete</button></td>
     </tr>
 
+    <tr><h5 ng-if="app.decks.length === 0">No saved decks, create a new deck to get started!</h5></tr>
+
   </table>
 
   <a href="/create"><button class="btn btn-info">Create a new deck</button></a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </div>
-
